--- a/examples/render/contour-deployment.yaml
+++ b/examples/render/contour-deployment.yaml
@@ -5125,8 +5125,9 @@ spec:
                       items:
                         properties:
                           cidr:
-                            description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                              to filter on.
+                            description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                              to filter on. This can also be a bare IP address (without
+                              a mask) to filter on exactly one address.
                             type: string
                           source:
                             description: 'Source indicates how to determine the ip
@@ -5153,8 +5154,9 @@ spec:
                       items:
                         properties:
                           cidr:
-                            description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                              to filter on.
+                            description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                              to filter on. This can also be a bare IP address (without
+                              a mask) to filter on exactly one address.
                             type: string
                           source:
                             description: 'Source indicates how to determine the ip
@@ -6485,8 +6487,9 @@ spec:
                     items:
                       properties:
                         cidr:
-                          description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                            to filter on.
+                          description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                            to filter on. This can also be a bare IP address (without
+                            a mask) to filter on exactly one address.
                           type: string
                         source:
                           description: 'Source indicates how to determine the ip address
@@ -6512,8 +6515,9 @@ spec:
                     items:
                       properties:
                         cidr:
-                          description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                            to filter on.
+                          description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                            to filter on. This can also be a bare IP address (without
+                            a mask) to filter on exactly one address.
                           type: string
                         source:
                           description: 'Source indicates how to determine the ip address
