--- a/examples/render/contour-gateway-provisioner.yaml
+++ b/examples/render/contour-gateway-provisioner.yaml
@@ -4926,8 +4926,9 @@ spec:
                       items:
                         properties:
                           cidr:
-                            description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                              to filter on.
+                            description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                              to filter on. This can also be a bare IP address (without
+                              a mask) to filter on exactly one address.
                             type: string
                           source:
                             description: 'Source indicates how to determine the ip
@@ -4954,8 +4955,9 @@ spec:
                       items:
                         properties:
                           cidr:
-                            description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                              to filter on.
+                            description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                              to filter on. This can also be a bare IP address (without
+                              a mask) to filter on exactly one address.
                             type: string
                           source:
                             description: 'Source indicates how to determine the ip
@@ -6286,8 +6288,9 @@ spec:
                     items:
                       properties:
                         cidr:
-                          description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                            to filter on.
+                          description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                            to filter on. This can also be a bare IP address (without
+                            a mask) to filter on exactly one address.
                           type: string
                         source:
                           description: 'Source indicates how to determine the ip address
@@ -6313,8 +6316,9 @@ spec:
                     items:
                       properties:
                         cidr:
-                          description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                            to filter on.
+                          description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                            to filter on. This can also be a bare IP address (without
+                            a mask) to filter on exactly one address.
                           type: string
                         source:
                           description: 'Source indicates how to determine the ip address
