--- a/examples/render/contour-gateway.yaml
+++ b/examples/render/contour-gateway.yaml
@@ -5131,8 +5131,9 @@ spec:
                       items:
                         properties:
                           cidr:
-                            description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                              to filter on.
+                            description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                              to filter on. This can also be a bare IP address (without
+                              a mask) to filter on exactly one address.
                             type: string
                           source:
                             description: 'Source indicates how to determine the ip
@@ -5159,8 +5160,9 @@ spec:
                       items:
                         properties:
                           cidr:
-                            description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                              to filter on.
+                            description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                              to filter on. This can also be a bare IP address (without
+                              a mask) to filter on exactly one address.
                             type: string
                           source:
                             description: 'Source indicates how to determine the ip
@@ -6491,8 +6493,9 @@ spec:
                     items:
                       properties:
                         cidr:
-                          description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                            to filter on.
+                          description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                            to filter on. This can also be a bare IP address (without
+                            a mask) to filter on exactly one address.
                           type: string
                         source:
                           description: 'Source indicates how to determine the ip address
@@ -6518,8 +6521,9 @@ spec:
                     items:
                       properties:
                         cidr:
-                          description: CIDR is a CIDR block of a ipv4 or ipv6 addresses
-                            to filter on.
+                          description: CIDR is a CIDR block of ipv4 or ipv6 addresses
+                            to filter on. This can also be a bare IP address (without
+                            a mask) to filter on exactly one address.
                           type: string
                         source:
                           description: 'Source indicates how to determine the ip address
